--- a/styles.css
+++ b/styles.css
@@ -159,6 +159,12 @@ h1 {
     .Project1 {width: auto;}
     .Project1 {top:0};
     .Project1 {padding-left: 10%;}
+	
+	.NewText {margin-left: 38%;}
+    .NewText {width: auto;}
+    .NewText {top:0};
+    .NewText {padding-left: 10%;}
+	
         
 
 
