--- a/styles.css
+++ b/styles.css
@@ -225,7 +225,7 @@ h1 {
     .Project1 {padding-left: 10%;}
     
     .image_reserach {margin-left: 50%;}
-    .image_reserach {width: 40%;}
+    .image_reserach {width: 500px;}
     .image_reserach {top:0};
     .image_reserach {padding-left: 10%;}
     
